# beacon-cli

./: README.md  cli.py  pyproject.toml
.github/workflows/: release.yml
